# S.Cb.

./: .gitignore  Discord_Bot.py  GEMINI.md  README.md  main.py  model_1.py  model_2.py  modules.py  pyproject.toml  requirements.txt  schema.sql  tokenizer.pickle
database/: db_config.py  db_controller.py
jupyter/: Model_2_training.ipynb  model_2_env.ipynb  model_2_testing.ipynb
